# RuntimeError

./: .editorconfig  .gitattributes  .gitignore  README.md
.github/workflows/: rust.yml
client/: package.json  pnpm-lock.yaml
client/src/: App.jsx  theme.js
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: MainLayout.jsx  Navbar.jsx
client/src/context/: ThemeContext.jsx
client/src/pages/: MainPage.jsx  MapPage.jsx  SettingsPage.jsx
firmware/: Cargo.toml
firmware/src/: main.rs
hardware/: Hardware.eprj
peripheral/: CMakeLists.txt  sdkconfig
peripheral/.devcontainer/: devcontainer.json
source/: Cargo.toml  memory.x
source/.cargo/: config.toml
source/src/: main.rs
source/src/sensors/: ultrasonic.rs
source/xtask/src/: main.rs
sources/src/: main.rs
vision/: sdkconfig.old
xtask/src/: main.rs
