[package]
name = "RuntimeError"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
log = "0.4.29"
panic-halt = "1.0.0"

stm32h7xx-hal = { version = "0.16", features = [
    "stm32h743",
    "rt",
    "usb_hs",
    "ethernet",
] }

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 1
strip = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
